@@ -1,5 +1,7 @@
 *Edge*
 
+* Multiparameter attributes skip time zone conversion for time-only columns [#1030 state:resolved] [Geoff Buesing]
+
 * Base.skip_time_zone_conversion_for_attributes uses class_inheritable_accessor, so that subclasses don't overwrite Base [#346 state:resolved] [miloops]
 
 * Added find_last_by dynamic finder #762 [miloops]
